[tool.poetry]
name = "hw03"
version = "0.1.0"
description = ""
authors = ["alexander-darwiche <59787022+alexander-darwiche@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.4"
matplotlib = "^3.10.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
